Импортированны данные из БД (Модели для работы с таблицами). Разработана Web-форма авторизации для ввода логина и пароля. Добавлена проверка на то, что логин и пароль действительно существуют такие же, как и в БД.

--- a/coursework/Web.config
+++ b/coursework/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,11 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-coursework-20240222093142.mdf;Initial Catalog=aspnet-coursework-20240222093142;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-coursework-20240222093142.mdf;Initial Catalog=aspnet-coursework-20240222093142;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ADOModelDB" connectionString="data source=USER\SQLEXPRESS;initial catalog=coursework;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
-  </appSettings>
+  <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.8" />
