Не администраторы не могут изменять что-то в таблицах для администраторов и не могут смотреть по ссылке

--- a/coursework/Web.config
+++ b/coursework/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-coursework-20240222093142.mdf;Initial Catalog=aspnet-coursework-20240222093142;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ADOModelDB" connectionString="data source=USER\SQLEXPRESS;initial catalog=coursework;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ADOModelDB" connectionString="data source=DESKTOP-VP2H4IL\SQLEXPRESS;initial catalog=coursework;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
