--- a/coursework/coursework.csproj
+++ b/coursework/coursework.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Controllers\Helpers\AuthenticationHelper.cs" />
     <Compile Include="Controllers\Admin\AdministrationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Models\ModelForSelection5.cs" />
     <Compile Include="Models\ModelForSelection4.cs" />
     <Compile Include="Models\ModelForSelection3.cs" />
     <Compile Include="Models\ModelForSelection_2.cs" />
@@ -371,6 +372,7 @@
     <Content Include="Views\Selections\Index2.cshtml" />
     <Content Include="Views\Selections\Index3.cshtml" />
     <Content Include="Views\Selections\Index4.cshtml" />
+    <Content Include="Views\Selections\Index5.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
